2010-02-10 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/src/linux/sdbg_linux_ttracer.hxx
	launchmon/src/linux/sdbg_linux_launchmon.cxx
	launchmon/src/linux/sdbg_linux_ttracer_impl.hxx
	launchmon/src/sdbg_base_mach_impl.hxx
	launchmon/src/sdbg_std.hxx
	launchmon/src/sdbg_opt.cxx
	launchmon/src/sdbg_base_mach.hxx: Rewrite some of the 
	thread iterator callback routines
	to handle an exception arising from Linux thread_db where
	it provides a garbage value when a target thread within the
	inferior process recently exited but is still in zombie state.  


2010-02-05 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/src/linux/lmon_api/lmon_fe.cxx
	launchmon/src/linux/lmon_api/lmon_be_comm.cxx
	launchmon/src/linux/lmon_api/lmon_be.cxx
	launchmon/src/linux/lmon_api/lmon_be_internal.hxx
	tools/cobo/src/cobo.c
	tools/pmgr_collective/src/pmgr_collective_client.h
	tools/pmgr_collective/src/pmgr_collective_common.h
	tools/pmgr_collective/src/pmgr_collective_client.c
	man/LMON_fe_launchAndSpawnDaemons.3: Add support to address a problem 
	where some systems like Eugene, the ORNL BGP sytsem, don't allow 
	resolving a hostname into an IP with gethostname and gethostbyname


2009-12-28 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/src/linux/lmon_api/lmon_fe.cxx,
	  launchmon/src/linux/lmon_api/lmon_be_comm.cxx,
	  tools/cobo/src/cobo.c,
	  tools/cobo/src/cobo.h,
	  tools/cobo/test/client.c,
	  tools/cobo/test/server_rsh.c: Picked up latest COBO update and
	  adjusted LaunchMON for its minor API change


2009-12-22 Dong H. Ahn <ahn1@llnl.gov>
	* launchmon/src/linux/sdbg_linux_symtab_impl.hxx: Bug fix 
	* launchmon/src/linux/sdbg_linux_launchmon.cxx: Added auxillary
	  vector support to discover the base load address of the system
	  loader more accurately.


2009-12-17 Dong H. Ahn <ahn1@llnl.gov>
	* Added COBO support. The default value for --with-bootfabric is now cobo


2009-10-30 Dong H. Ahn <ahn1@llnl.gov>
	* tools/ciod/debugger_interface.h: updated this with ciod debug
	  interface version 4.